# Simple-Neural-Network

./: README.md  TODO
src/: ActivationFunctions.cpp  ActivationFunctions.h  CMakeLists.txt  ErrorFunctions.cpp  ErrorFunctions.h  Layer.cpp  Layer.h  NeuralNetwork.cpp  NeuralNetwork.h  Neuron.cpp  Neuron.h  Weight.cpp  Weight.h  driver.cpp
